2010-06-04 Homer Xing <homer.xing@gmail.com>

    * Improve architecture. Do not need to manually update AILURUS_VERSION.
    * Add dbus daemon version. Check dbus daemon status by reading version.
    * Provide a dialog to restart daemon.
    * Improve code. Express all of Mint, YLMF, Deepin as UBUNTU_DERIV.
    * Improve code. Do not import lib twice.

2010-06-02 Homer Xing <homer.xing@gmail.com>

    * Do not interrupt installation process if download() failed
    * Fix bug: TempOwn fails if directory does not exist
    * Handle the situation such that information function returns []

2010-06-01 Homer Xing <homer.xing@gmail.com>

    * Move stardict dictionaries into computer doctor pane
    * Move gcompris voice, childsplay voice into computer doctor pane

2010-05-31 HAN Haofu<gtxx3600@gmail.com>

    * Move all apps in native_apps.py to native_apps.cfg.
    * Move app's __doc__ and detail to support/strings.py.
    * Fix bug: In clean_up_pane, TextView under 'Reclaim memory' button is editable. 

2010-05-31 Homer Xing <homer.xing@gmail.com>

    * Improve desktop environment detection.

2010-05-30 MA Yue <velly.empire@gmail.com>

    * Add the Screensaver Panel

2010-05-30 Homer Xing <homer.xing@gmail.com>

    * Add a preference menuitem to choose default pane.
    * Re-enable Oracle repository.
    * Move language support to Computer Doctor pane.
    * Add Eclipse owner correction in Computer Doctor pane.
    * Fix bug: MPlayer-vod cannot be installed.
    * Fix bug: cannot install software without key.
    * Fix bug: SHA-DA radio cannot be installed.
    * Do not raise NotImplementedError when remove Aptana. Display some text instead.
    * Fix bug: Install the latest songbird.
    * Fix bug: _download_one_file.install() always fail even if successfully copied file.
    * Fix bug: cannot download NScript.
    * Fix bug: Weave is renamed to Firefox Sync.
    * Support Linux Deepin. Linux Deepin users please upgrade to 10.05.93.
